# device-agent

./: .gitignore  CMakeLists.txt  README.md  test_config.json  test_config_socket.json
android/: build.gradle  gradlew  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/deviceagent/: BootReceiver.kt  DeviceAgentService.kt  MainActivity.kt  UIHelper.kt
android/app/src/main/res/drawable/: ic_notification.xml
android/grpc-android-prebuilt/arm64-v8a/cmake/protobuf/: protobuf-targets-release.cmake  protobuf-targets.cmake
android/grpc-android-prebuilt/arm64-v8a/share/pkgconfig/: zlib.pc
android/grpc-android-prebuilt/armeabi-v7a/share/pkgconfig/: zlib.pc
android/grpc-android-prebuilt/host-tools/: grpc_cpp_plugin
android/grpc-android-prebuilt/x86/share/pkgconfig/: zlib.pc
android/grpc-android-prebuilt/x86_64/share/pkgconfig/: zlib.pc
docs/: architecture.md
examples/: CMakeLists.txt
examples/pharmacy_app/: CMakeLists.txt  main.cpp  pharmacy_app.h
gen-android/: device.grpc.pb.h  service.grpc.pb.h
gen-android/terminal_agent/v1/: device.grpc.pb.cc  device.grpc.pb.h  device.pb.cc  device.pb.h  service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
gen-desktop/terminal_agent/v1/: device.grpc.pb.cc  device.pb.cc  device.pb.h  service.grpc.pb.cc  service.pb.cc  service.pb.h
proto/terminal_agent/v1/: device.proto
src/: main.cpp
src/bridge/: bridge.cc  bridge.h
src/client/: command_handler.cc  command_handler.h  device_client.cc  device_client.h
src/config/: config.cc  config.h
src/executor/: android_executor.cc  executor.h  linux_executor.cc  macos_executor.cc
src/logger/: logger.cc  logger.h
src/reboot_state/: reboot_state.cc  reboot_state.h
